syntax = "proto3";

package onight.zjfae.afront.gens.v3;
option java_outer_classname="OrderNotSubscribedProduct";

//Generated By BrewRobot:Thu Sep 28 14:24:41 CST 2017

message PBIFE_trade_queryOrderNotSubscribedProduct{
	///ife/trade/queryOrderNotSubscribedProduct.html
	message TaProductOrderDetailObjectList{
		string id = 1;	 //,id,String,不校验,是,
		string fundAccount = 2;	 //,会员资金账号,String,不校验,是,
		string submitDate = 3;	 //,预约提交日期 yyyy-MM-dd,String,不校验,是,
		string submitTime = 4;	 //,预约提交时间 HH:mm:ss,String,不校验,是,
		string orderType = 5;	 //,预约类型 0-特约;1-普通预约;2-定值预约,String,不校验,是,
		string orderProductCode = 6;	 //,预约产品编号：普通预约时有，其他为空,String,不校验,是,
		string productCode = 7;	 //,产品编号：预约认购对应的实际产品代码,String,不校验,是,
		string productName = 8;	 //,产品名称,String,不校验,是,
		string orderBuyAmount = 9;	 //,预约认购金额,String,不校验,是,
		string actualBuyAmount = 10;	 //,实际认购金额,String,不校验,是,
		string depositRate = 11;	 //,保证金比例,String,不校验,是,
		string freezeDeposit = 12;	 //,冻结保证金金额,String,不校验,是,
		string unfreezeDeposit = 13;	 //,解冻保证金金额,String,不校验,是,
		string orderStatus = 14;	 //,预约状态：1-已受理;2-已撤销;3-未受理;4-审核失败,String,不校验,是,
		string subscrebeStatus = 15;	 //,认购状态：0-未认购;1-已认购;2-已认购撤单,String,不校验,是,
		string appointmentStatus = 16;	 //,履约状态：0-未履约;1-已履约;2-已违约,String,不校验,是,
		string breakContractDate = 17;	 //,违约日期,String,不校验,是,
		string expectSubscrebeDeadline = 18;	 //,期望认购期限:关联配置表配置id,定制类,String,不校验,是,
		string productRate = 19;	 //,产品利率:定制类,String,不校验,是,
		string expectSubscrebeDate = 20;	 //,期望认购时间:定制类,String,不校验,是,
		string gmtCreate = 21;	 //,创建时间,String,不校验,是,
		string gmtModify = 22;	 //,修改时间,String,不校验,是,
		string ext1 = 23;	 //,扩展字段1,String,不校验,是,
		string ext2 = 24;	 //,扩展字段2,String,不校验,是,
		string orderNum = 25;	 //,预约编号,String,不校验,是,
		string buyStartDate = 26;	 //,募集开始时间,String,不校验,是,
		string buyEndDate = 27;	 //,募集结束时间,String,不校验,是,
		string gmtCreateBegin = 28;	 //,创建开始,String,不校验,是,
		string gmtCreateEnd = 29;	 //,创建结束,String,不校验,是,
		string isDefaultQuery = 30;	 //,是否默认查询条件 1 是，0 否,String,不校验,是,
		string isRunBlack = 31;	 //,是否跑过黑名单定时任务,String,不校验,是,
		string buyEndDateBefore = 32;	 //,buyEndDateBefore,String,不校验,是,
		string depositRateBigger = 33;	 //,depositRateBigger,String,不校验,是,
		string isDisplayBuy = 34;	 //,isDisplayBuy,String,不校验,是,
		string currentDate = 35;	 //,currentDate,String,不校验,是,
		string buyStartDateAfter = 36;	 //,buyStartDateAfter,String,不校验,是,
		string areaJumpType = 37;//预约未认购首页弹框专区区分：默认普通预约：02，特约交易专区03,String,不校验,是,
	}

	message TcSpecialOrderDetailObject{
		string seriesNo = 1;//  ,系列编号,String,不校验,是,
		string seriesName = 2;//  ,系列名称,String,不校验,是,
		string isDisplayBuy = 3;//  ,预约首页弹框是否显示立即预约按钮 ,String,不校验,是,
		string areaJumpType = 4;//预约未认购首页弹框专区区分：默认普通预约：02，特约交易专区03,String,不校验,是,
		string jumpUrl = 5;
	}

	repeated TaProductOrderDetailObjectList taProductOrderDetailObjectList = 1;

	repeated TcSpecialOrderDetailObject tcSpecialOrderDetailObjectList = 101;

}

message Ret_PBIFE_trade_queryOrderNotSubscribedProduct{
	///ife/trade/queryOrderNotSubscribedProduct.html

	string returnCode=1;	//报文头

	string returnMsg=2;	//报文头

	PBIFE_trade_queryOrderNotSubscribedProduct data=3;


}

message REQ_PBIFE_trade_queryOrderNotSubscribedProduct{
	///ife/trade/queryOrderNotSubscribedProduct.html

	string version = 1;//  ,版本：1.0.1,String,不校验,是,
}